[package]
name = "lineup-stalker"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
strip = true
lto = true
panic = "abort"

[profile.release.build-override]
opt-level = 3
strip = true
debug = false
debug-assertions = false
overflow-checks = false
incremental = true
codegen-units = 1

[dependencies]
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.4"
mlb-api = "0.1.5"
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros"] }
tokio-macros = "=2.7.0"
anyhow = { version = "1.0.102", default-features = false, features = ["std"] }
fxhash = "0.2.1"
cli-clipboard = "0.4.0"
pollster = "0.4.0"
